--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
   "keywords": [
     "irc",
     "haxfred"
-  
-     ],
-    "bin": {
-    },
-  "dependencies": {},
+  ],
+  "bin": {
+  },
+  "dependencies": {
+    "haxfred": "haxiom/haxfred#development"
+  },
   "engines": {
     "node": "*"
-  
   }
-
 }
