--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "bin": {
   },
   "dependencies": {
-    "haxfred": "haxiom/haxfred#development"
+    "haxfred": "haxiom/haxfred#development",
+    "irc": ""
   },
   "engines": {
     "node": "*"
